--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
     <link rel="stylsheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Student Information Portal</title>
   </head>
-  <body>
+  <body style="background-color: lightgrey;">
     <div id="root"></div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
